--- a/app.json
+++ b/app.json
@@ -3,13 +3,13 @@
     "description": "Directly upload files to Cloud",
     "repository": "https://github.com/Mrigank11/embetacloud",
     "env": {
-        "GOOGLE_CLIENT_ID": {834691392771-dupf0kjcq6h40d78j794c8b8aqfv0b6i.apps.googleusercontent.com
+        "GOOGLE_CLIENT_ID": {885527864197-uhtlcs663njfpjdst6m25fhjlf1ll8rp.apps.googleusercontent.com
             "description": "Google Project's Client ID"
         },
-        "GOOGLE_CLIENT_SECRET": {798SJeZWugEvEcMJgrOOjDYS
+        "GOOGLE_CLIENT_SECRET": {-sQ9fzYG0QkgK07p1PnyLpxM
             "description": "Google Project's Client Secret"
         },
-        "GOOGLE_REDIRECT_URL": {
+        "GOOGLE_REDIRECT_URL": {http://embetaload.cleverapps.io
             "description": "Google Project's Redirect url"
         }
     }
